feat: change to added new Executors for virtual threads, updated entities to handle list in oracle db, added test profile